--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
+        "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "grunt": "^1.0.2",
+        "grunt-tslint": "^5.0.1",
+        "tslint": "^5.9.1",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
     }
 }
