--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/node": "^7.0.43",
         "grunt": "^1.0.2",
         "grunt-tslint": "^5.0.1",
+        "js-beautify": "^1.7.5",
         "tslint": "^5.9.1",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
