--- a/package.json
+++ b/package.json
@@ -27,16 +27,21 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "mocha -r ts-node/register -u tdd src/**/*.test.ts"
     },
     "devDependencies": {
-        "@types/mocha": "^2.2.42",
+        "@types/chai": "^4.1.2",
+        "@types/mocha": "^2.2.48",
         "@types/node": "^7.0.43",
+        "chai": "^4.1.2",
         "grunt": "^1.0.2",
         "grunt-tslint": "^5.0.1",
         "js-beautify": "^1.7.5",
+        "mocha": "^5.0.5",
+        "ts-node": "^5.0.1",
         "tslint": "^5.9.1",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
-    }
+    },
+    "dependencies": {}
 }
