--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "chai": "^4.1.2",
         "grunt": "^1.0.2",
         "grunt-tslint": "^5.0.1",
+        "htmlparser2": "^3.9.2",
         "js-beautify": "^1.7.5",
         "mocha": "^5.0.5",
         "ts-node": "^5.0.1",
