--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "htmlparser2": "^3.9.2",
         "js-beautify": "^1.7.5",
         "mocha": "^5.0.5",
+        "titlecase": "^1.1.2",
         "ts-node": "^5.0.1",
         "tslint": "^5.9.1",
         "typescript": "^2.6.1",
