--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/mocha": "^2.2.48",
         "@types/node": "^7.0.43",
         "chai": "^4.1.2",
+        "eslint": "^4.19.1",
         "grunt": "^1.0.2",
         "grunt-tslint": "^5.0.1",
         "html-entities": "^1.2.1",
