--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.formatTutorials"
+        "onCommand:extension.formatTutorials",
+        "onCommand:extension.formatCode"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -19,6 +20,10 @@
             {
                 "command": "extension.formatTutorials",
                 "title": "INT: Format Tutorials"
+            },
+            {
+                "command": "extension.formatCode",
+                "title": "INT: Format Code"
             }
         ]
     },
