Use 'Cheerio' to parse HTML

--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
         "@types/mocha": "^2.2.48",
         "@types/node": "^7.0.43",
         "chai": "^4.1.2",
+        "cheerio": "^1.0.0-rc.2",
         "eslint": "^4.19.1",
         "grunt": "^1.0.2",
         "grunt-tslint": "^5.0.1",
         "html-entities": "^1.2.1",
-        "htmlparser2": "^3.9.2",
         "js-beautify": "^1.7.5",
         "mocha": "^5.0.5",
         "titlecase": "^1.1.2",
